# OBPlanner

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: build_settings.json  code.py  scanning_strategies.md
examples/: examples.py
obplanner/: main.py
obplanner/model/: build.py  layer_default.py  pattern.py  single_file.py  strategies.py
obplanner/obf/: generate_obf.py
obplanner/obf/helpers/: build.lua  buildProcessors.json  manifest.json  obpviewer.py
obplanner/pattern/: compensator.py  generator.py
obplanner/strategy/: generate_strategy.py  strategy_mapping.py
obplanner/strategy/helpers/: find_connected.py  find_contours.py  offset_pattern.py
obplanner/strategy/sort_strategies/: contour_sorting.py  line_sorting.py  spot_sorting.py
tests/input/: build1.json
tests/output/build_2025_06_24_17_03_48/: buildProcessors.json  dependencies.json
tests/output/build_2025_06_24_17_03_48/obp/: jump0.obp  layer0melt0.obp  layer19melt1.obp
tests/output/build_2025_06_24_17_05_22/: buildInfo.json
