[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OBPlanner"
version = "0.0.1"
authors = [{ name = "Anton Wiberg", email = "wiberg.anton@gmail.com" }]
description = "A path planning tool for Open Beam Path (OBP) files."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = [
    "obplib",
    "py3mf_slicer",
    "numpy",
    "pyvista",
    "shapely",
    "rasterio",
    "scipy",
    "opencv-python",
    "tqdm"
]

[project.urls]
Homepage = "https://github.com/wiberganton/OBPlanner"
Repository = "https://github.com/wiberganton/OBPlanner"