[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OBPlanner"
version = "0.0.2"
authors = [{ name = "Anton Wiberg", email = "wiberg.anton@gmail.com" }]
description = "A path planning tool for Open Beam Path (OBP) files."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = [
    "obplib",
    "py3mf_slicer",
    "numpy",
    "pyvista",
    "shapely",
    "rasterio",
    "scipy",
    "opencv-python",
    "tqdm",
    "matplotlib",
    "pytest",
    "scikit-image",
]
[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# Adjust this to match your actual package structure
"obplanner.obf.helpers" = ["*.json", "*.lua", "*.py"]

[project.urls]
Homepage = "https://github.com/wiberganton/OBPlanner"
Repository = "https://github.com/wiberganton/OBPlanner"